feat  Add header title

--- a/index.html
+++ b/index.html
@@ -3,29 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.min.css">
+    <title>Corano - Jewelery Shop eCommerce</title>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="https://kit.fontawesome.com/46675d0a76.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@latest/font/bootstrap-icons.css">
+
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <div class="header_top">
+        <div class="header_top horizontal">
+            <div class="page-width horizontal">
                 <div>Welcome to Corano Jewelery online store</div>
                 <div class="horizontal currency_language">
                     <div class="dropdown_currency">$ Currency</div>
                     <div class="dropdown_language">
-
+    
                         Language
                     </div>
                 </div>
             </div>
-            <div id="header_middle">
-
-            </div>
-            <div id="header_tabs">
-
+        </div>
+        <div class="title horizontal">
+            <div class="page-width horizontal">
+                <div class="social horizontal">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-youtube-play"></i></a>
+                </div>
+                <div class="logo-corano">
+                    <a href="index.html">
+                        <img src="images/logo-corano.png" alt="Brand Logo">
+                    </a>
+                </div>
+                <div class="hud-buttons horizontal">
+                    <button class="icon-button"><i class="bi bi-search"></i></button>
+                    <button class="icon-button"><i class="fa-regular fa-user"></i></button>
+                    <button class="icon-button"><i class="bi bi-heart"></i></button>
+                    <button class="icon-button"><i class="bi bi-bag-check"></i></button>
+                </div>
             </div>
         </div>
     </header>
@@ -34,7 +50,7 @@
     </nav>
     <main>
         <div id="title"></div>
-        <div id="starter_slider"></div>
+        <div id="banners"></div>
         <div id="hot_deals"></div>
         <div id="featureds"></div>
         <div id="latests_blogs"></div>
