fix Use ul and li for header hud buttons

--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
                         <img src="images/logo-corano.png" alt="Brand Logo">
                     </a>
                 </div>
-                <div class="hud-buttons horizontal">
-                    <button class="icon-button"><i class="bi bi-search"></i></button>
-                    <button class="icon-button"><i class="fa-regular fa-user"></i></button>
-                    <button class="icon-button"><i class="bi bi-heart"></i></button>
-                    <button class="icon-button"><i class="bi bi-bag-check"></i></button>
-                </div>
+                <ul class="hud-buttons horizontal">
+                    <li><button class="icon-button"><i class="bi bi-search"></i></button></li>
+                    <li><button class="icon-button"><i class="fa-regular fa-user"></i></button></li>
+                    <li><button class="icon-button"><i class="bi bi-heart"></i></button></li>
+                    <li><button class="icon-button"><i class="bi bi-bag-check"></i></button></li>
+                </ul>
             </div>
         </div>
     </header>
     <nav>
-        
+        <ul>
+            <li>Hello</li>
+            <li>Hello</li>
+            <li>Hello</li>
+        </ul>
     </nav>
     <main>
         <div id="title"></div>
