feat Create nav section without functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="horizontal currency_language">
                     <div class="dropdown_currency">$ Currency</div>
                     <div class="dropdown_language">
-    
+                        <i class="bi bi-translate"></i>
                         Language
                     </div>
                 </div>
@@ -46,20 +46,27 @@
         </div>
     </header>
     <nav>
-        <ul>
-            <li>Hello</li>
-            <li>Hello</li>
-            <li>Hello</li>
-        </ul>
+        <div class="horizontal center nav-sticky">
+            <ul class="horizontal space-between main-nav">
+                <li class="drop-down">Home <i class="bi bi-chevron-down"></i></li>
+                <li class="drop-down">Pages <i class="bi bi-chevron-down"></i></li>
+                <li class="drop-down">Shop <i class="bi bi-chevron-down"></i></li>
+                <li class="drop-down">Blog <i class="bi bi-chevron-down"></i></li>
+                <li class="drop-down">Contact Us</li>
+            </ul>
+        </div>
     </nav>
     <main>
-        <div id="title"></div>
-        <div id="banners"></div>
-        <div id="hot_deals"></div>
-        <div id="featureds"></div>
-        <div id="latests_blogs"></div>
-        <div id="new_arrivals"></div>
-        <div id="instagram"></div>
+        <section id="banners">
+            <div class="banners box-gray ">
+                
+            </div>
+        </section>
+        <section id="hot_deals"></section>
+        <section id="featureds"></section>
+        <section id="latests_blogs"></section>
+        <section id="new_arrivals"></section>
+        <section id="instagram"></section>
     </main>
     <footer>
 
