fix Use flex, absolute position, and transform translation to put the corano logo at center while side elements to the sides fix Fix some header title positioning

--- a/index.html
+++ b/index.html
@@ -24,29 +24,41 @@
             </div>
         </div>
         <div class="title horizontal">
-            <div class="page-width horizontal">
-                <div class="social horizontal">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <div class="page-width horizontal space-between">
+                <div class="width-zero">
+                    <div class="absolute pivot-top-left">
+                        <ul class="social horizontal">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="logo-corano">
-                    <a href="index.html">
-                        <img src="images/logo-corano.png" alt="Brand Logo">
-                    </a>
+                <div class="width-zero">
+                    <div class="absolute pivot-top-center">
+                        <div class="logo-corano">
+                            <a href="index.html">
+                                <img src="images/logo-corano.png" alt="Brand Logo">
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <ul class="hud-buttons horizontal">
-                    <li><button class="icon-button"><i class="bi bi-search"></i></button></li>
-                    <li><button class="icon-button"><i class="fa-regular fa-user"></i></button></li>
-                    <li><button class="icon-button"><i class="bi bi-heart"></i></button></li>
-                    <li><button class="icon-button"><i class="bi bi-bag-check"></i></button></li>
-                </ul>
+                <div class="width-zero">
+                    <div class="absolute pivot-top-right">
+                        <ul class="hud-buttons horizontal">
+                            <li><button class="icon-button"><i class="bi bi-search"></i></button></li>
+                            <li><button class="icon-button"><i class="fa-regular fa-user"></i></button></li>
+                            <li><button class="icon-button"><i class="bi bi-heart"></i></button></li>
+                            <li><button class="icon-button"><i class="bi bi-bag-check"></i></button></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
     <nav>
-        <div class="horizontal center nav-sticky">
+        <div class="horizontal flex-center nav-sticky">
             <ul class="horizontal space-between main-nav">
                 <li class="drop-down">Home <i class="bi bi-chevron-down"></i></li>
                 <li class="drop-down">Pages <i class="bi bi-chevron-down"></i></li>
