feat Add hover and drop-downs for currencyand language

--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
 </head>
 <body>
     <header>
-        <div class="header_top horizontal">
+        <div class="header-top horizontal">
             <div class="page-width horizontal">
                 <div>Welcome to Corano Jewelery online store</div>
-                <div class="horizontal currency_language">
-                    <div class="dropdown_currency">$ Currency</div>
-                    <div class="dropdown_language">
+                <div class="horizontal currency-language">
+                    <div class="hover-bg drop-down">
+                        $ Currency
+                        <div class="container">
+                            <ul class="drop-down-list ">
+                                <li class="hover-bg">$ USD</li>
+                                <li class="hover-bg">€ EURO</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="hover-bg drop-down">
                         <i class="bi bi-translate"></i>
                         Language
+                        <div class="container">
+                            <ul class="drop-down-list ">
+                                <li class="hover-bg">English</li>
+                                <li class="hover-bg">French</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -26,48 +40,40 @@
         <div class="title horizontal">
             <div class="page-width horizontal space-between">
                 <div class="width-zero">
-                    <div class="absolute pivot-top-left">
-                        <ul class="social horizontal">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-                        </ul>
+                    <ul class="absolute pivot-top-left social horizontal">
+                        <li><a href="https://facebook.com/"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://x.com/"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://youtube.com/"><i class="fa fa-youtube-play"></i></a></li>
+                    </ul>
+                </div>
+                <div class="width-zero">
+                    <div class="absolute pivot-top-center logo-corano">
+                        <a href="index.html">
+                            <img src="images/logo-corano.png" alt="Brand Logo">
+                        </a>
                     </div>
                 </div>
                 <div class="width-zero">
-                    <div class="absolute pivot-top-center">
-                        <div class="logo-corano">
-                            <a href="index.html">
-                                <img src="images/logo-corano.png" alt="Brand Logo">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="width-zero">
-                    <div class="absolute pivot-top-right">
-                        <ul class="hud-buttons horizontal">
-                            <li><button class="icon-button"><i class="bi bi-search"></i></button></li>
-                            <li><button class="icon-button"><i class="fa-regular fa-user"></i></button></li>
-                            <li><button class="icon-button"><i class="bi bi-heart"></i></button></li>
-                            <li><button class="icon-button"><i class="bi bi-bag-check"></i></button></li>
-                        </ul>
-                    </div>
+                    <ul class="absolute pivot-top-right hud-buttons horizontal">
+                        <li><button class="icon-button hover-bg"><i class="bi bi-search"></i></button></li>
+                        <li><button class="icon-button hover-bg drop-down"><i class="fa-regular fa-user"></i></button></li>
+                        <li><button class="icon-button hover-bg"><i class="bi bi-heart"></i></button></li>
+                        <li><button class="icon-button hover-bg"><i class="bi bi-bag-check"></i></button></li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </header>
-    <nav>
         <div class="horizontal flex-center nav-sticky">
             <ul class="horizontal space-between main-nav">
-                <li class="drop-down">Home <i class="bi bi-chevron-down"></i></li>
-                <li class="drop-down">Pages <i class="bi bi-chevron-down"></i></li>
-                <li class="drop-down">Shop <i class="bi bi-chevron-down"></i></li>
-                <li class="drop-down">Blog <i class="bi bi-chevron-down"></i></li>
-                <li class="drop-down">Contact Us</li>
+                <li class="hover-bg drop-down">Home <i class="bi bi-chevron-down"></i></li>
+                <li class="hover-bg drop-down">Pages <i class="bi bi-chevron-down"></i></li>
+                <li class="hover-bg drop-down">Shop <i class="bi bi-chevron-down"></i></li>
+                <li class="hover-bg drop-down">Blog <i class="bi bi-chevron-down"></i></li>
+                <li class="hover-bg drop-down">Contact Us</li>
             </ul>
         </div>
-    </nav>
+    </header>
     <main>
         <section id="banners">
             <div class="banners box-gray ">
