fix Nav elements stick to the top

--- a/index.html
+++ b/index.html
@@ -64,56 +64,56 @@
                 </div>
             </div>
         </div>
-        <div class="horizontal flex-center nav-sticky">
-            <ul class="horizontal space-between main-nav">
-                <li class="hover-bg drop-down">
-                    Home <i class="bi bi-chevron-down"></i>
-                    <div class="container">
-                        <ul class="drop-down-list ">
-                            <li class="hover-bg">Homve Version 01</li>
-                            <li class="hover-bg">Homve Version 02</li>
-                            <li class="hover-bg">Homve Version 03</li>
-                            <li class="hover-bg">Homve Version 04</li>
-                            <li class="hover-bg">Homve Version 05</li>
-                            <li class="hover-bg">Homve Version 06</li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="hover-bg drop-down">Pages <i class="bi bi-chevron-down"></i></li>
-                <li class="hover-bg drop-down">
-                    Shop <i class="bi bi-chevron-down"></i>
-                    <div class="container">
-                        <ul class="drop-down-list ">
-                            <li class="hover-bg horizontal space-between">
-                                <span>Shop Grid Layout</span>
-                                <i class="bi bi-chevron-right"></i>
-                            </li>
-                            <li class="hover-bg horizontal space-between">
-                                <span>Shop List Layout</span>
-                                <i class="bi bi-chevron-right"></i>
-                            </li>
-                            <li class="hover-bg horizontal space-between">
-                                <span>Product Details</span>
-                                <i class="bi bi-chevron-right"></i>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="hover-bg drop-down">
-                    Blog <i class="bi bi-chevron-down"></i>
-                    <div class="container">
-                        <ul class="drop-down-list ">
-                            <li class="hover-bg">Blog Left Sidebar</li>
-                            <li class="hover-bg">Blog List Left Sidebar</li>
-                            <li class="hover-bg">Blog Right Sidebar</li>
-                            <li class="hover-bg">Blog List Right Sidebar</li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="hover-bg drop-down">Contact Us</li>
-            </ul>
-        </div>
     </header>
+    <nav class="horizontal flex-center nav-sticky">
+        <ul class="horizontal space-between main-nav">
+            <li class="hover-bg drop-down">
+                Home <i class="bi bi-chevron-down"></i>
+                <div class="container">
+                    <ul class="drop-down-list ">
+                        <li class="hover-bg">Homve Version 01</li>
+                        <li class="hover-bg">Homve Version 02</li>
+                        <li class="hover-bg">Homve Version 03</li>
+                        <li class="hover-bg">Homve Version 04</li>
+                        <li class="hover-bg">Homve Version 05</li>
+                        <li class="hover-bg">Homve Version 06</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="hover-bg drop-down">Pages <i class="bi bi-chevron-down"></i></li>
+            <li class="hover-bg drop-down">
+                Shop <i class="bi bi-chevron-down"></i>
+                <div class="container">
+                    <ul class="drop-down-list ">
+                        <li class="hover-bg horizontal space-between">
+                            <span>Shop Grid Layout</span>
+                            <i class="bi bi-chevron-right"></i>
+                        </li>
+                        <li class="hover-bg horizontal space-between">
+                            <span>Shop List Layout</span>
+                            <i class="bi bi-chevron-right"></i>
+                        </li>
+                        <li class="hover-bg horizontal space-between">
+                            <span>Product Details</span>
+                            <i class="bi bi-chevron-right"></i>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li class="hover-bg drop-down">
+                Blog <i class="bi bi-chevron-down"></i>
+                <div class="container">
+                    <ul class="drop-down-list ">
+                        <li class="hover-bg">Blog Left Sidebar</li>
+                        <li class="hover-bg">Blog List Left Sidebar</li>
+                        <li class="hover-bg">Blog Right Sidebar</li>
+                        <li class="hover-bg">Blog List Right Sidebar</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="hover-bg drop-down">Contact Us</li>
+        </ul>
+    </nav>
     <main>
         <section id="banners">
             <div class="banners box-gray ">
