feat Add incomplete banners with sliders

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     </ul>
                 </div>
                 <div class="width-zero">
-                    <div class="absolute pivot-top-center logo-corano">
+                    <div class="absolute pivot-top-center">
                         <a href="index.html">
-                            <img src="images/logo-corano.png" alt="Brand Logo">
+                            <img src="assets/images/logo-corano.png" alt="Brand Logo">
                         </a>
                     </div>
                 </div>
@@ -116,8 +116,17 @@
     </nav>
     <main>
         <section id="banners">
-            <div class="banners box-gray ">
-                
+            <div class="banners box-gray">
+                <div class="slider">
+                    <div>
+                    </div>
+                    <div>
+                    </div>
+                    <div>
+                    </div>
+                    <div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="hot_deals"></section>
@@ -126,6 +135,8 @@
         <section id="new_arrivals"></section>
         <section id="instagram"></section>
     </main>
+
+    <div style="background-color: blue; width: 50vmax;">Hello</div>
     <footer>
 
     </footer>
