feat Implement switching sliders by slider-buttons class

--- a/index.html
+++ b/index.html
@@ -117,14 +117,23 @@
     <main>
         <section id="banners">
             <div class="banners box-gray">
-                <div class="slider">
+                <div class="slider" data-slider="banners">
                     <div>
+
                     </div>
                     <div>
                     </div>
                     <div>
                     </div>
                     <div>
+                    </div>
+                </div>
+                <div class="relative">
+                    <div class="slider-buttons-container">
+                        <div class="slider-buttons" data-slider="banners">
+                            <button class="slider-prev"><i class="bi bi-chevron-left"></i></button>
+                            <button class="slider-next"><i class="bi bi-chevron-right"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -136,7 +145,7 @@
         <section id="instagram"></section>
     </main>
 
-    <div style="background-color: blue; width: 50vmax;">Hello</div>
+    <!-- <div style="background-color: blue; width: 50vmax;">Hello</div> -->
     <footer>
 
     </footer>
