fix Put the slider's next/prev buttons in front of the slider

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </nav>
     <main>
         <section id="banners">
-            <div class="banners box-gray">
+            <div class="banners box-gray relative">
                 <div class="slider" data-slider="banners">
                     <div>
 
@@ -128,12 +128,10 @@
                     <div>
                     </div>
                 </div>
-                <div class="relative">
-                    <div class="slider-buttons-container">
-                        <div class="slider-buttons" data-slider="banners">
-                            <button class="slider-prev"><i class="bi bi-chevron-left"></i></button>
-                            <button class="slider-next"><i class="bi bi-chevron-right"></i></button>
-                        </div>
+                <div class="slider-buttons-container">
+                    <div class="slider-buttons" data-slider="banners">
+                        <button class="slider-prev hover-bg"><i class="bi bi-chevron-left"></i></button>
+                        <button class="slider-next hover-bg"><i class="bi bi-chevron-right"></i></button>
                     </div>
                 </div>
             </div>
