feat Setup content of banner sliders fix avoid slider buttons div block the clicking

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corano - Jewelery Shop eCommerce</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/46675d0a76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@latest/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -118,14 +118,32 @@
         <section id="banners">
             <div class="banners box-gray relative">
                 <div class="slider" data-slider="banners">
-                    <div>
-
+                    <div class="slide">
+                        <div class="content">
+                            <h2 class="slide-title">Family Jewelery 
+                                <span>Collection</span>
+                            </h2>
+                            <h4 class="slide-description">Designer Jewelery Necklaces-Braclets-Earnings</h4>
+                            <a class="read-more" href="">Read More</a>
+                        </div>
                     </div>
-                    <div>
+                    <div class="slide">
+                        <div class="content">
+                            <h2 class="slide-title">Pearls Spring 
+                                <span>Collection</span>
+                            </h2>
+                            <h4 class="slide-description">New pearl earrings and more from $99</h4>
+                            <a class="read-more" href="">Read More</a>
+                        </div>
                     </div>
-                    <div>
-                    </div>
-                    <div>
+                    <div class="slide">
+                        <div class="content">
+                            <h2 class="slide-title">Grace Designer 
+                                <span>Jewelery</span>
+                            </h2>
+                            <h4 class="slide-description">Rings, occasions Pieces, Pandora & More.</h4>
+                            <a class="read-more" href="">Read More</a>
+                        </div>
                     </div>
                 </div>
                 <div class="slider-buttons-container">
