--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corano - Jewelery Shop eCommerce</title>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900" rel="stylesheet">
     <script src="https://kit.fontawesome.com/46675d0a76.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@latest/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/main.css">
@@ -123,7 +123,7 @@
                             <h2 class="slide-title">Family Jewelery 
                                 <span>Collection</span>
                             </h2>
-                            <h4 class="slide-description">Designer Jewelery Necklaces-Braclets-Earnings</h4>
+                            <h4 class="slide-desc">Designer Jewelery Necklaces-Braclets-Earnings</h4>
                             <a class="read-more" href="">Read More</a>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                             <h2 class="slide-title">Pearls Spring 
                                 <span>Collection</span>
                             </h2>
-                            <h4 class="slide-description">New pearl earrings and more from $99</h4>
+                            <h4 class="slide-desc">New pearl earrings and more from $99</h4>
                             <a class="read-more" href="">Read More</a>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                             <h2 class="slide-title">Grace Designer 
                                 <span>Jewelery</span>
                             </h2>
-                            <h4 class="slide-description">Rings, occasions Pieces, Pandora & More.</h4>
+                            <h4 class="slide-desc">Rings, occasions Pieces, Pandora & More.</h4>
                             <a class="read-more" href="">Read More</a>
                         </div>
                     </div>
