fix Use default value with object deconsturction for more readable and maintainable Slider contruction

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <main>
         <section id="banners">
             <div class="banners box-gray relative">
-                <div class="slider" data-slider="banners">
+                <div class="slider" data-slider-id="banners">
                     <div class="slide">
                         <div class="content">
                             <h2 class="slide-title">Family Jewelery 
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="slider-buttons-container">
-                    <div class="slider-buttons" data-slider="banners">
+                    <div class="slider-buttons" data-slider-id="banners">
                         <button class="slider-prev hover-bg"><i class="bi bi-chevron-left"></i></button>
                         <button class="slider-next hover-bg"><i class="bi bi-chevron-right"></i></button>
                     </div>
